apps/firefly/firefly/networkpolicies/egress-firefly-cron.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-firefly-cron
  namespace: firefly
spec:
  selector: job == 'firefly-cron'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'firefly'
        ports:
          - 8080
