apps/firefly/firefly/networkpolicies/egress-firefly.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-firefly
  namespace: firefly
spec:
  selector: app == 'firefly'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'firefly-mariadb'
        ports:
          - 3306
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
