apps/firefly/firefly/networkpolicies/ingress-firefly.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-firefly
  namespace: firefly
spec:
  selector: app == 'firefly'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 8080
